<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:backgroundTint="#ECECEC"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="#92e7b49f"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/o_que_voc_quer_fazer"
            android:textAlignment="center"
            android:textColor="#201E1E"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="388dp"
        android:layout_height="360dp"
        android:layout_marginStart="4dp"
        android:background="#ECECEC"
        android:padding="@dimen/big_padding"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAdd"
        tools:listitem="@layout/recyclerview_item">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/etNewThought"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insira_a_sua_tarefa"
        android:inputType="textPersonName"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#CF7751"
        android:fontFamily="@font/poppins"
        android:gravity="center|center_vertical"
        android:shadowColor="#352424"
        android:text="@string/add_na_lista"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewThought"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C62828"
        android:fontFamily="@font/poppins"
        android:shadowColor="#352424"
        android:text="@string/apagar_tudo"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview" />


</androidx.constraintlayout.widget.ConstraintLayout>